@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
hide circle

class Database {
  $connection
  __construct()
}

class Host {
  create(string $name, string $address): int
  read(int $id): array
  readByNameAddress(string $name, string $address): array
  readAll(): array
  readOrCreate(string $name, string $address): array
  update(int $id, string $name, string $address): int
  remove(int $id): int
}

class Icmp {
  create(int $transmitted, int $received, int $host_id): int
  read(int $id): array
  readAll(): array
  readJoinAll(): array
  update(int $id, int $transmitted, int $received, string $created_at, int $host_id)
  remove(int $id)
}

class Packet {
  create(int $seq, int $ttl, float $time, int $icmp_id): int
  read(int $id): array
  readAll(): array
  update(int $id, int $seq, int $ttl, float $time, int $icmp_id): int
  remove(int $id): int
}

Database -- Host
Database -- Icmp
Database -- Packet
@enduml
